<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".Activities.RaiseAComplaintActivity">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_back_red_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/raise_a_complaint"
            android:textColor="@color/black"
            android:textSize="24dp"
            app:layout_constraintBottom_toBottomOf="@id/img_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/img_back" />


        <include
            android:id="@+id/view_order"
            layout="@layout/row_orders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_back" />

        <EditText
            android:id="@+id/et_complaint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/light_gray_border_rectangle_10"
            android:fontFamily="@font/roboto_regular"
            android:gravity="top|left"
            android:hint="@string/please_let_us_know"
            android:inputType="textMultiLine"
            android:minLines="6"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_order" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/white_rectangle_100"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/submit"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@id/et_complaint" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>




