<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white"
    tools:context=".Activities.SignInActivity">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:layout_marginTop="30dp"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_enter_mo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/enter_mobile_number"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/img_back"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_india_91"
        android:paddingStart="6dp"
        android:textSize="16dp"
        android:inputType="phone"
        android:textColor="@color/black"
        android:maxLength="10"
        android:backgroundTint="@color/black"
        android:imeOptions="actionDone"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_mo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        />

    <TextView
        android:id="@+id/tv_terms_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:text="@string/terms_privacy_text"
        android:fontFamily="@font/roboto_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_phone"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_continue"
        android:textSize="16dp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/white_rectangle_100"
        android:backgroundTint="@color/brand_color"
        app:layout_constraintTop_toBottomOf="@id/tv_terms_privacy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>





</androidx.constraintlayout.widget.ConstraintLayout>