<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".Activities.PaymentActivity">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_back_red_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/payment"
        android:textColor="@color/black"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="@id/img_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/img_back" />

    <ImageView
        android:id="@+id/img_payments"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="36dp"
        android:scaleType="centerInside"
        android:src="@drawable/img_payments"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_heading"/>
    <TextView
        android:id="@+id/tv_final_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="₹1499"
        android:textColor="@color/blue"
        android:textSize="64dp"
        android:layout_marginTop="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_payments"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/gray"
        android:text="@string/payment_note"
        app:layout_constraintBottom_toTopOf="@id/btn_pay"/>


    <com.ncorti.slidetoact.SlideToActView
        android:id="@+id/btn_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:text="@string/pay_now"
        app:text_style="bold"
        app:outer_color="@color/blue"
        app:text_size="24dp"
        android:layout_marginBottom="24dp"
        app:complete_icon="@drawable/ic_razorpay_logo"
        app:animate_completion="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>